@@ -33,17 +33,19 @@ cp printer/* /usr/share/foomatic/db/source/printer/
 
 ##### PPDs generation, RedHat paths
 
-#foomatic-datafile -t cups -d epl5700l -p Epson-EPL-5700L >Epson-EPL-5700L-epl5700l-cups.ppd
+#foomatic-datafile -t cups -d epl5700l -p 312297          >Epson-EPL-5700L-epl5700l-cups.ppd
 #foomatic-datafile -t cups -d epl5800l -p Epson-EPL-5800L >Epson-EPL-5800L-epl5800l-cups.ppd
 #foomatic-datafile -t cups -d epl5900l -p Epson-EPL-5900L >Epson-EPL-5900L-epl5900l-cups.ppd
+#foomatic-datafile -t cups -d epl6100l -p Epson-EPL-6100L >Epson-EPL-6100L-epl6100l-cups.ppd
 #gzip -9 Epson-EPL-*-cups.ppd
 #cp -av Epson-EPL-*-cups.ppd.gz /usr/share/cups/model/foomatic/Epson/
 
 ##### PPDs generation, Mandrake paths
 
-#foomatic-datafile -t cups -d epl5700l -p Epson-EPL-5700L >epl5700l.ppd
+#foomatic-datafile -t cups -d epl5700l -p 312297          >epl5700l.ppd
 #foomatic-datafile -t cups -d epl5800l -p Epson-EPL-5800L >epl5800l.ppd
 #foomatic-datafile -t cups -d epl5900l -p Epson-EPL-5900L >epl5900l.ppd
+#foomatic-datafile -t cups -d epl6100l -p Epson-EPL-6100L >epl6100l.ppd
 #gzip -9 epl*.ppd
 #cp -av epl*.ppd.gz /usr/share/cups/model/epson/
 
@@ -53,8 +55,9 @@ cp printer/* /usr/share/foomatic/db/source/printer/
 # cp opt/*     /usr/local/share/foomatic/db/source/opt/
 # cp printer/* /usr/local/share/foomatic/db/source/printer/
 
-# /usr/local/bin/foomatic-datafile -t cups -d epl5700l -p Epson-EPL-5700L >Epson-EPL-5700L-epl5700l-cups.ppd
+# /usr/local/bin/foomatic-datafile -t cups -d epl5700l -p 312297          >Epson-EPL-5700L-epl5700l-cups.ppd
 # /usr/local/bin/foomatic-datafile -t cups -d epl5800l -p Epson-EPL-5800L >Epson-EPL-5800L-epl5800l-cups.ppd
 # /usr/local/bin/foomatic-datafile -t cups -d epl5900l -p Epson-EPL-5900L >Epson-EPL-5900L-epl5900l-cups.ppd
+# /usr/local/bin/foomatic-datafile -t cups -d epl6100l -p Epson-EPL-6100L >Epson-EPL-6100L-epl6100l-cups.ppd
 # gzip -9 Epson-EPL-*-cups.ppd
 # cp -av Epson-EPL-*-cups.ppd.gz /usr/share/cups/model/
