@@ -5,11 +5,11 @@
    <en>Flow Control</en>
   </arg_longname>
   <arg_shortname>
-   <en>Flow Control</en><!-- backends only know <en> shortnames! -->
+   <en>FlowControl</en><!-- backends only know <en> shortnames! -->
   </arg_shortname>
   <arg_execution>
    <arg_group>General</arg_group>
-   <arg_order>200</arg_order>
+   <arg_order>190</arg_order>
    <arg_spot>B</arg_spot>
    <arg_substitution />
    <arg_proto>EplFlowControl=%s,</arg_proto>
@@ -61,29 +61,29 @@
    </enum_val>
    <enum_val id="ev/1200">
     <ev_longname>
-     <en>USB (kernel /dev/usb/lp0)</en>
+     <en>USB (kernel dev_usb_lp0)</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>USB (kernel /dev/usb/lp0)</en>
+     <en>USB (kernel dev_usb_lp0)</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>/dev/usb/lp0</ev_driverval>
+    <ev_driverval>dev_usb_lp0</ev_driverval>
    </enum_val>
    <enum_val id="ev/1201">
     <ev_longname>
-     <en>USB (kernel /dev/usb/lp1)</en>
+     <en>USB (kernel dev_usb_lp1)</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>USB (kernel /dev/usb/lp1)</en>
+     <en>USB (kernel dev_usb_lp1)</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>/dev/usb/lp1</ev_driverval>
+    <ev_driverval>dev_usb_lp1</ev_driverval>
    </enum_val>
    <enum_val id="ev/2100">
     <ev_longname>
@@ -100,29 +100,29 @@
    </enum_val>
    <enum_val id="ev/2200">
     <ev_longname>
-     <en>ParPort (kernel /dev/lp0)</en>
+     <en>ParPort (kernel dev_lp0)</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>ParPort (kernel /dev/lp0)</en>
+     <en>ParPort (kernel _dev_lp0)</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>/dev/lp0</ev_driverval>
+    <ev_driverval>dev_lp0</ev_driverval>
    </enum_val>
    <enum_val id="ev/2201">
     <ev_longname>
-     <en>ParPort (kernel /dev/lp1)</en>
+     <en>ParPort (kernel dev_lp1)</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>ParPort (kernel /dev/lp1)</en>
+     <en>ParPort (kernel dev_lp1)</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>/dev/lp1</ev_driverval>
+    <ev_driverval>dev_lp1</ev_driverval>
    </enum_val>
   </enum_vals>
 </option>
